--- a/index.html
+++ b/index.html
@@ -46,15 +46,18 @@
         </ul>
     </div>
 
+    <br/>
+
     <div class="center">
         <iframe id='video' width="560" height="315" src="https://www.youtube.com/embed/3ahWiS--CUU" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
     </div>
 
-    <div id='footer'>
+    <br />
 
+    <div id='footer'>
+        <p>Copyright 2016, Original Trombones</p>
     </div>
 </body>
 
 
-</html>
 </html>
