--- a/index.html
+++ b/index.html
@@ -16,8 +16,10 @@
             <ul>
                 <a class="nav-link" href="#form">
                 <li>Features</li></a>
-                <li><a class="nav-link" href="#how-it-works"></a>How it Works</li>
-                <li><a class="nav-link" href="#footer"></a>Pricing</li>
+                <a class="nav-link" href="#how-it-works">
+                <li>How it Works</li></a>
+                <a class="nav-link" href="#footer">
+                <li>Pricing</li></a>
             </ul>
         </nav>
 
